fixed styling (again) in links (wrong color applied)

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
 
 a {
   user-select: none;
+  color: var(--text-color);
 }
 
 a:visited,
